--- a/app/config/parameters_test.yml
+++ b/app/config/parameters_test.yml
@@ -8,7 +8,7 @@ parameters:
     database_password: null
     mailer_transport: gmail
     mailer_host: ~
-    mailer_user: everest0corp@gmail.com
-    mailer_password: 45744574C
+    mailer_user: @gmail.com
+    mailer_password: 
     locale: en
     secret: ThisTokenIsNotSoSecretChangeIt
