--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -11,8 +11,8 @@ parameters:
 
     mailer_transport:  gmail
     mailer_host:       ~
-    mailer_user: everest0corp@gmail.com
-    mailer_password: 45744574C
+    mailer_user: 
+    mailer_password: 
 
     locale:            en
 
